--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ body {
   color: var(--primary-text-color);
   font-family: "Roboto", sans-serif;
   letter-spacing: 0.03em;
-  max-width: 1600px;
+  /* max-width: 1600px; */
 }
 
 /* LOGO */
