--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -231,7 +231,6 @@ nav ul li:not(:last-child) {
 .li-item {
   display: block;
   width: 370px;
-  /* height: 368px; */
   background: #ffffff;
   border: 1px solid #eeeeee;
   box-sizing: border-box;
@@ -253,6 +252,35 @@ nav ul li:not(:last-child) {
   margin: 0 24px;
   padding-bottom: 20px;
   padding-top: 20px;
+}
+
+.projects-overlay {
+  position: relative;
+  overflow: hidden;
+}
+
+.paragraph {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  transform: translateY(100%);
+  transition: transform 250ms ease;
+  background-color: rgba(33, 150, 243, 0.9);
+  padding: 63px 24px;
+}
+
+.li-item:hover .paragraph {
+  transform: translateY(0);
 }
 
 /* Підвал */
