--- a/css/styles.css
+++ b/css/styles.css
@@ -453,7 +453,7 @@ nav ul li:not(:last-child) {
 }
 
 .ourteam-social-link:hover,
-..ourteam-social-link:focus {
+.ourteam-social-link:focus {
   background-color: var(--text-hover-focus);
   transition: 250ms var(--time-distribution-function);
 }
